--- a/.github/workflows/multiarch-docker-hub.yml
+++ b/.github/workflows/multiarch-docker-hub.yml
@@ -19,9 +19,6 @@ permissions:
   packages: write
 
 on:
-  push:
-    branches:
-      - main
   release:
   workflow_dispatch:
   workflow_call:
@@ -76,7 +73,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           push: true
-          tags: ${{ steps.metaintegration.outputs.tags }},latest
+          tags: ${{ steps.metaintegration.outputs.tags }}
           labels: ${{ steps.metaintegration.outputs.labels }}
 
       - name: Pull and extract files from Docker image (amd64)
