--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swish"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,3 +16,6 @@ serde_json = "1.0.114"
 sha2 = "0.10.8"
 simple_logger = "4.3.3"
 openssl-sys = { version = "0.9", features = ["vendored"] }
+
+[build-dependencies]
+reqwest = {version = "0.12", features = ["blocking"]}
