--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ regex = "1.10.3"
 serde_json = "1.0.114"
 sha2 = "0.10.8"
 simple_logger = "4.3.3"
-openssl-sys = { version = "0.9", features = ["vendored"] }
 
 [build-dependencies]
-reqwest = {version = "0.12", features = ["blocking"]}
+reqwest = {version = "0.12", features = ["blocking", "rustls-tls"]}
