--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ sha2 = "0.10.8"
 simple_logger = "4.3.3"
 
 [build-dependencies]
-reqwest = {version = "0.12", features = ["blocking", "rustls-tls"]}
+reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "json", "rustls-tls"] }
