--- a/.github/workflows/multiarch-docker-hub.yml
+++ b/.github/workflows/multiarch-docker-hub.yml
@@ -19,9 +19,8 @@ permissions:
   packages: write
 
 on:
-  push:
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+  release:
+    types: [published]
   # release:
   # workflow_dispatch:
   # workflow_call:
