--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "swish"
-version = "1.0.3"
+version = "1.0.4"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,12 +12,16 @@ clap = { version = "4.5.4", features = ["derive"] }
 curl = "0.4.46"
 indicatif = "0.17.8"
 log = "0.4.21"
-regex = "1.10.3"
 serde_json = "1.0.114"
 sha2 = "0.10.8"
 simple_logger = "4.3.3"
 openssl-sys = { version = "0.9", features = ["vendored"] }
+rustls = "0.23"
+reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
+regex = "1.11"
 
 [build-dependencies]
 rustls = "0.23"
 reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
+regex = "1.11"
+
