--- a/.github/workflows/multiarch-docker-hub.yml
+++ b/.github/workflows/multiarch-docker-hub.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/arm64, linux/amd64, linux/armhf
+          platforms: linux/arm64, linux/amd64 #, linux/armhf
           cache-from: type=gha
           cache-to: type=gha,mode=max
           push: true
